--- a/pom.xml
+++ b/pom.xml
@@ -32,17 +32,19 @@
 			<version>${spring-framework.version}</version>
 		</dependency>
 
-		<!-- Spring JDBC Support -->
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
+			<artifactId>spring-aop</artifactId>
 			<version>${spring-framework.version}</version>
-		</dependency> -->
+		</dependency>
+		<!-- Spring JDBC Support -->
+		<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-jdbc</artifactId> 
+			<version>${spring-framework.version}</version> </dependency> -->
 
 		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-test</artifactId>
-		    <version>${spring-framework.version}</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring-framework.version}</version>
 		</dependency>
 		<!-- MySQL Driver <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
 			<version>5.0.5</version> </dependency> -->
@@ -61,12 +63,23 @@
 			<version>${spring-data-mongodb.version}</version>
 		</dependency>
 
-<dependency>
-   <groupId>junit</groupId>
-   <artifactId>junit</artifactId>
-   <version>4.11</version>
-   <scope>test</scope>
-</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.6.11</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.6.11</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Logging with SLF4J & LogBack -->
 		<dependency>
